Food amenities changes and uri removed from PhotosModel.kt

--- a/app/src/main/res/values-hi/strings.xml
+++ b/app/src/main/res/values-hi/strings.xml
@@ -18,7 +18,7 @@
 आपके इंटरनेट कनेक्शन में कुछ गड़बड़ है।
 बाद में पुन: प्रयास करें।"</string>
     <string name="unable_to_connect">सर्वर से जुड़ने में असमर्थ</string>
-    <string name="please_wait">कृपया प्रतीक्षा करें...</string>
+    <string name="please_wait">कृपया प्रतीक्षा करें…</string>
     <string name="get_request">अनुरोध प्राप्त करें</string>
     <string name="db_retrieve">डीबी से डेटा प्राप्त करें</string>
     <string name="delete_record_from_db">डीबी से रिकॉर्ड हटाएं</string>
@@ -84,14 +84,14 @@
     <string name="flat_hard_parking">फ्लैट हार्ड पार्किंग</string>
     <string name="kacha_flat_parking">कच्चा फ्लैट पार्किंग</string>
     <string name="select_parking_space">पार्किंग स्थान चुनें</string>
-    <string name="_1_20">1-20</string>
-    <string name="twenty_to_fifty">20-50</string>
-    <string name="_50_100">50-100</string>
+    <string name="_1_20">1–20</string>
+    <string name="twenty_to_fifty">20–50</string>
+    <string name="_50_100">50–100</string>
     <string name="above_100">100 से ऊपर</string>
     <string name="bed_charpai">बिस्तर/चारपाई</string>
     <string name="number_of_beds">बिस्तरों की संख्या</string>
-    <string name="_1_2">1-2</string>
-    <string name="_2_5">2-5</string>
+    <string name="_1_2">1–2</string>
+    <string name="_2_5">2–5</string>
     <string name="above_5">5+</string>
     <string name="upload_sleeping_amenities_photo">सोने की सुविधा फोटो अपलोड करें</string>
     <string name="fan">फैन </string>
@@ -112,8 +112,8 @@
     <string name="daily_utility_shop">दैनिक उपयोगिता की दुकान 24x7</string>
     <string name="barber">नाई</string>
     <string name="in_premises">परिसर में</string>
-    <string name="_1_200_m">1-200 M</string>
-    <string name="_200_400_m">200-400 M</string>
+    <string name="_1_200_m">1–200 M</string>
+    <string name="_200_400_m">200–400 M</string>
     <string name="food_amen_title">खाद्य सुविधाएं जोड़ें</string>
     <string name="parking_amen_title">पार्किंग सुविधाएं जोड़ें</string>
     <string name="sleeping_amen_title">सोने की सुविधाएं जोड़ें</string>
@@ -395,4 +395,71 @@
     <string name="verifying">सत्यापित करना ..</string>
     <string name="enter_valid_otp">कृपया एक वैध OTP दर्ज करें</string>
     <string name="otp_sent">ओटीपी भेजा गया</string>
+    <string name="resend_in">" फिर से भेजें:"</string>
+    <string name="assign">असाइन</string>
+    <string name="manager_name">प्रबंधक का नाम</string>
+    <string name="manager">प्रबंधक</string>
+    <string name="verified">सत्यापित</string>
+    <string name="pay_now">भुगतान करें</string>
+    <string name="send_for_approval">अनुमोदन के लिए भेजें</string>
+    <string name="enter_mgr_name">कृपया प्रबंधक का नाम दर्ज करें।</string>
+    <string name="manager_assigned_successfully">प्रबंधक सफलतापूर्वक सौंपा गया।</string>
+    <string name="assigning_manager">प्रबंधक असाइन करना ..</string>
+    <string name="open_and_closing_times">खुला और समापन समय</string>
+    <string name="weeks">हफ्तों</string>
+    <string name="start_time">समय शुरू</string>
+    <string name="end_time">अंतिम समय</string>
+    <string name="not_available">उपलब्ध नहीं है</string>
+    <string name="please_select_start_time_first">कृपया पहले प्रारंभ समय का चयन करें</string>
+    <string name="please_select_another_time">कृपया वैध समय का चयन करें</string>
+    <string name="please_enter_customer_name">कृपया ग्राहक का नाम दर्ज करें</string>
+    <string name="please_enter_customer_phone_number">कृपया ग्राहक फोन नंबर दर्ज करें</string>
+    <string name="assign_manager">प्रबंधक असाइन करें</string>
+    <string name="no_customers">कोई ग्राहक नहीं</string>
+    <string name="search_customer">ग्राहक खोजें</string>
+    <string name="add_customer">ग्राहक जोड़ें</string>
+    <string name="customer_name">ग्राहक का नाम</string>
+    <string name="customer_phone_number">ग्राहक फोन नंबर</string>
+    <string name="send_invitation">निमंत्रण भेजो</string>
+    <string name="no_orders">कोई आदेश नहीं</string>
+    <string name="new_orders">नए आदेश</string>
+    <string name="past_orders">पिछले आदेश</string>
+    <string name="discounts">छूट</string>
+    <string name="search_discount">खोज छूट</string>
+    <string name="add_new_discount">नई छूट जोड़ें</string>
+    <string name="active_discounts">सक्रिय छूट</string>
+    <string name="no_discount">कोई छूट नहीं</string>
+    <string name="delete_discount">छूट हटाएं</string>
+    <string name="expired_discounts">समय सीमा समाप्त</string>
+    <string name="reject_offers">प्रस्तावों को अस्वीकार करें</string>
+    <string name="expired_offers">एक्सपायर्ड ऑफर</string>
+    <string name="active_offers">सक्रिय प्रस्ताव</string>
+    <string name="no_offers">कोई प्रस्ताव नहीं</string>
+    <string name="add_new_offers">नए ऑफ़र जोड़ें</string>
+    <string name="reward_points">ईनामी अंक</string>
+    <string name="no_shops">कोई दुकान नहीं</string>
+    <string name="search_shop">खोज दुकान</string>
+    <string name="search_product">खोज उत्पाद</string>
+    <string name="select_existing_manager">मौजूदा प्रबंधक का चयन करें</string>
+    <string name="add_existing_mgr">मौजूदा प्रबंधक जोड़ें</string>
+    <string name="error_saving_timing">धाबा समय की बचत करते हुए त्रुटि हुई</string>
+    <string name="select_dhaba_timings">कृपया ढाबा समय का चयन करें</string>
+    <string name="select_times_for_all_days">कृपया सभी दिनों के लिए खुलने का चयन करें।</string>
+    <string name="opening_time_validation">प्रारंभ समय समाप्त समय के बाद नहीं हो सकता</string>
+    <string name="closing_time_validation">अंत समय शुरू होने से पहले नहीं हो सकता</string>
+    <string name="saving_timing">धाबा समय की बचत</string>
+    <string name="call_request_submitted">अनुरोध प्रस्तुत किया गया है। हम आपको 24 घंटे के भीतर बुलाएंगे।</string>
+    <string name="information">जानकारी</string>
+    <string name="reviews">समीक्षा</string>
+    <string name="add">लिखना</string>
+    <string name="no_reviews">कोई समीक्षा नहीं</string>
+    <string name="food_type">खाद्य प्रकार</string>
+    <string name="washroom_area">वाशरूम क्षेत्र</string>
+    <string name="outdoor">बाहर</string>
+    <string name="indoor">अंदर</string>
+    <string name="upload_pics">चित्र अपलोड करें</string>
+    <string name="under_100">80 से कम</string>
+    <string name="_81_150">81–150</string>
+    <string name="_151_200">151–200</string>
+    <string name="_201_300">201–300</string>
 </resources>
