--- a/app/src/main/res/values-pa/strings.xml
+++ b/app/src/main/res/values-pa/strings.xml
@@ -15,7 +15,7 @@
 
     <string name="server_taking_too_long_to_respond">ਸਰਵਰ ਜਵਾਬ ਦੇਣ ਵਿੱਚ ਬਹੁਤ ਸਮਾਂ ਲੈ ਰਿਹਾ ਹੈ\"ਤੁਹਾਡੇ ਇੰਟਰਨੈਟ ਕਨੈਕਸ਼ਨ ਵਿੱਚ ਕੁਝ ਗਲਤ ਹੈ.ਬਾਅਦ ਵਿੱਚ ਦੁਬਾਰਾ ਕੋਸ਼ਿਸ਼ ਕਰੋ.</string>
     <string name="unable_to_connect">ਸਰਵਰ ਨਾਲ ਜੁੜਨ ਵਿੱਚ ਅਸਮਰੱਥ</string>
-    <string name="please_wait">ਕ੍ਰਿਪਾ ਕਰਕੇ ਉਡੀਕ ਕਰੋ...</string>
+    <string name="please_wait">ਕ੍ਰਿਪਾ ਕਰਕੇ ਉਡੀਕ ਕਰੋ…</string>
     <string name="get_request">ਬੇਨਤੀ ਪ੍ਰਾਪਤ ਕਰੋ</string>
     <string name="db_retrieve">ਡੀਬੀ ਤੋਂ ਡਾਟਾ ਪ੍ਰਾਪਤ ਕਰੋ</string>
     <string name="delete_record_from_db">ਡੀਬੀ ਤੋਂ ਰਿਕਾਰਡ ਮਿਟਾਓ</string>
@@ -80,14 +80,14 @@
     <string name="flat_hard_parking">ਫਲੈਟ ਹਾਰਡ ਪਾਰਕਿੰਗ</string>
     <string name="kacha_flat_parking">ਕੱਚਾ ਫਲੈਟ ਪਾਰਕਿੰਗ</string>
     <string name="select_parking_space">ਪਾਰਕਿੰਗ ਸਥਾਨ ਦੀ ਚੋਣ ਕਰੋ</string>
-    <string name="_1_20">1-20</string>
-    <string name="twenty_to_fifty">20-50</string>
-    <string name="_50_100">50-100</string>
+    <string name="_1_20">1–20</string>
+    <string name="twenty_to_fifty">20–50</string>
+    <string name="_50_100">50–100</string>
     <string name="above_100">100 ਤੋਂ ਉੱਪਰ</string>
     <string name="bed_charpai">ਬਿਸਤਰਾ/ਬੰਕ</string>
     <string name="number_of_beds">ਬਿਸਤਰੇ ਦੀ ਗਿਣਤੀ</string>
-    <string name="_1_2">1-2</string>
-    <string name="_2_5">2-5</string>
+    <string name="_1_2">1–2</string>
+    <string name="_2_5">2–5</string>
     <string name="above_5">5+</string>
     <string name="fan">ਪੱਖਾ</string>
     <string name="cooler">ਕੂਲਰ</string>
@@ -107,8 +107,8 @@
     <string name="daily_utility_shop">ਰੋਜ਼ਾਨਾ ਉਪਯੋਗਤਾ ਦੀ ਦੁਕਾਨ 24x7</string>
     <string name="barber">ਨਾਈ</string>
     <string name="in_premises">ਕੈਂਪਸ ਵਿੱਚ</string>
-    <string name="_1_200_m">1-200 M</string>
-    <string name="_200_400_m">200-400 M</string>
+    <string name="_1_200_m">1–200 M</string>
+    <string name="_200_400_m">200–400 M</string>
     <string name="food_amen_title">ਭੋਜਨ ਸਹੂਲਤਾਂ ਸ਼ਾਮਲ ਕਰੋ</string>
     <string name="parking_amen_title">ਪਾਰਕਿੰਗ ਸਹੂਲਤਾਂ ਸ਼ਾਮਲ ਕਰੋ</string>
     <string name="sleeping_amen_title">ਸੋਨੇ ਦੀਆਂ ਵਿਸ਼ੇਸ਼ਤਾਵਾਂ ਸ਼ਾਮਲ ਕਰੋ</string>
@@ -388,5 +388,72 @@
     <string name="verifying">ਤਸਦੀਕ ..</string>
     <string name="enter_valid_otp">ਕਿਰਪਾ ਕਰਕੇ ਇੱਕ ਵੈਧ ਓਟੀਪੀ ਦਰਜ ਕਰੋ</string>
     <string name="otp_sent">ਓਟੀਪੀ ਭੇਜਿਆ ਗਿਆ</string>
+    <string name="resend_in">ਦੁਬਾਰਾ ਭੇਜੋ:</string>
+    <string name="assign">ਨਿਰਧਾਰਤ ਕਰੋ</string>
+    <string name="assign_manager">ਪ੍ਰਬੰਧਕ ਨਿਰਧਾਰਤ ਕਰੋ</string>
+    <string name="manager_name">ਮੈਨੇਜਰ ਦਾ ਨਾਮ</string>
+    <string name="manager">ਮੈਨੇਜਰ</string>
+    <string name="verified">ਪ੍ਰਮਾਣਿਤ</string>
+    <string name="pay_now">ਭੁਗਤਾਨ ਕਰੋ</string>
+    <string name="send_for_approval">ਪ੍ਰਵਾਨਗੀ ਲਈ ਭੇਜੋ</string>
+    <string name="enter_mgr_name">ਕਿਰਪਾ ਕਰਕੇ ਮੈਨੇਜਰ ਦਾ ਨਾਮ ਦਰਜ ਕਰੋ.</string>
+    <string name="manager_assigned_successfully">ਮੈਨੇਜਰ ਨੂੰ ਸਫਲਤਾਪੂਰਵਕ ਨਿਰਧਾਰਤ ਕੀਤਾ ਗਿਆ.</string>
+    <string name="assigning_manager">ਪ੍ਰਬੰਧਕ ਪ੍ਰਬੰਧਕ ..</string>
+    <string name="open_and_closing_times">ਖੋਲ੍ਹੋ ਅਤੇ ਬੰਦ ਕਰਨ ਦਾ ਸਮਾਂ</string>
+    <string name="weeks">ਹਫ਼ਤੇ</string>
+    <string name="start_time">ਸ਼ੁਰੂ ਕਰਨ ਦਾ ਸਮਾਂ</string>
+    <string name="end_time">ਅੰਤ ਦਾ ਸਮਾਂ</string>
+    <string name="not_available">ਉਪਲਭਦ ਨਹੀ</string>
+    <string name="please_select_start_time_first">ਕਿਰਪਾ ਕਰਕੇ ਪਹਿਲਾਂ ਸ਼ੁਰੂ ਸਮੇਂ ਦੀ ਚੋਣ ਕਰੋ</string>
+    <string name="please_select_another_time">ਕਿਰਪਾ ਕਰਕੇ ਵੈਧ ਸਮਾਂ ਚੁਣੋ</string>
+    <string name="please_enter_customer_name">ਕਿਰਪਾ ਕਰਕੇ ਗਾਹਕ ਦਾ ਨਾਮ ਦਰਜ ਕਰੋ</string>
+    <string name="please_enter_customer_phone_number">ਕਿਰਪਾ ਕਰਕੇ ਗਾਹਕ ਫੋਨ ਨੰਬਰ ਦਾਖਲ ਕਰੋ</string>
+    <string name="no_customers">ਕੋਈ ਗਾਹਕ ਨਹੀਂ</string>
+    <string name="search_customer">ਖੋਜ ਗਾਹਕ</string>
+    <string name="add_customer">ਗਾਹਕ ਸ਼ਾਮਲ ਕਰੋ</string>
+    <string name="customer_name">ਗਾਹਕ ਦਾ ਨਾਮ</string>
+    <string name="customer_phone_number">ਗਾਹਕ ਫੋਨ ਨੰਬਰ</string>
+    <string name="send_invitation">ਸੱਦਾ ਭੇਜੋ</string>
+    <string name="no_orders">ਕੋਈ ਆਰਡਰ ਨਹੀਂ</string>
+    <string name="new_orders">ਨਵੇਂ ਆਰਡਰ</string>
+    <string name="past_orders">ਪਿਛਲੇ ਆਰਡਰ</string>
+    <string name="discounts">ਛੂਟ</string>
+    <string name="search_discount">ਖੋਜ ਛੂਟ</string>
+    <string name="add_new_discount">ਨਵੀਂ ਛੂਟ ਸ਼ਾਮਲ ਕਰੋ</string>
+    <string name="active_discounts">ਐਕਟਿਵ ਛੋਟ</string>
+    <string name="no_discount">ਕੋਈ ਛੂਟ ਨਹੀਂ</string>
+    <string name="delete_discount">ਛੂਟ ਹਟਾਓ</string>
+    <string name="expired_discounts">ਮਿਆਦ ਪੁੱਗੀ ਛੋਟ</string>
+    <string name="reject_offers">ਪੇਸ਼ਕਸ਼ਾਂ ਨੂੰ ਰੱਦ ਕਰਨਾ</string>
+    <string name="expired_offers">ਮਿਆਦ ਪੁੱਗ ਗਈ ਪੇਸ਼ਕਸ਼</string>
+    <string name="active_offers">ਸਰਗਰਮ ਪੇਸ਼ਕਸ਼ਾਂ</string>
+    <string name="no_offers">ਕੋਈ ਪੇਸ਼ਕਸ਼ ਨਹੀਂ</string>
+    <string name="add_new_offers">ਨਵੀਆਂ ਪੇਸ਼ਕਸ਼ਾਂ ਸ਼ਾਮਲ ਕਰੋ</string>
+    <string name="reward_points">ਇਨਾਮ ਬਿੰਦੂ</string>
+    <string name="no_shops">ਕੋਈ ਦੁਕਾਨਾਂ ਨਹੀਂ</string>
+    <string name="search_shop">ਖੋਜ ਦੁਕਾਨ</string>
+    <string name="search_product">ਖੋਜ ਉਤਪਾਦ</string>
+    <string name="select_existing_manager">ਮੌਜੂਦਾ ਮੈਨੇਜਰ ਦੀ ਚੋਣ ਕਰੋ</string>
+    <string name="add_existing_mgr">ਮੌਜੂਦਾ ਮੈਨੇਜਰ ਸ਼ਾਮਲ ਕਰੋ</string>
+    <string name="error_saving_timing">ਢਾਬਾ ਸਮਾਂ ਸੰਭਾਲਣ ਦੌਰਾਨ ਗਲਤੀ ਆਈ ਹੈ</string>
+    <string name="select_dhaba_timings">ਕਿਰਪਾ ਕਰਕੇ ਢਾਬਾ ਸਮਾਂ ਚੁਣੋ</string>
+    <string name="saving_timing">ਢਾਬਾ ਟਾਈਮਿੰਗ ਸਟੋਰ ਕਰਨਾ</string>
+    <string name="select_times_for_all_days">ਕਿਰਪਾ ਕਰਕੇ ਸਾਰੇ ਦਿਨਾਂ ਲਈ ਖੁੱਲਣ ਦਾ ਸਮਾਂ ਚੁਣੋ।</string>
+    <string name="opening_time_validation">ਸ਼ੁਰੂਆਤੀ ਸਮਾਂ ਸਮਾਪਤੀ ਸਮੇਂ ਤੋਂ ਬਾਅਦ ਨਹੀਂ ਹੋ ਸਕਦਾ</string>
+    <string name="closing_time_validation">ਸਮਾਪਤੀ ਸਮਾਂ ਸ਼ੁਰੂਆਤੀ ਸਮੇਂ ਤੋਂ ਪਹਿਲਾਂ ਨਹੀਂ ਹੋ ਸਕਦਾ</string>
+    <string name="call_request_submitted">ਬੇਨਤੀ ਜਮ੍ਹਾਂ ਕਰ ਦਿੱਤੀ ਗਈ ਹੈ. ਅਸੀਂ ਤੁਹਾਨੂੰ 24 ਘੰਟਿਆਂ ਦੇ ਅੰਦਰ ਕਾਲ ਕਰਾਂਗੇ.</string>
+    <string name="information">ਜਾਣਕਾਰੀ</string>
+    <string name="reviews">ਸਮੀਖਿਆਵਾਂ</string>
+    <string name="add">ਲਿਖੋ</string>
+    <string name="no_reviews">ਕੋਈ ਸਮੀਖਿਆ ਨਹੀਂ</string>
+    <string name="food_type">ਭੋਜਨ ਦੀ ਕਿਸਮ</string>
+    <string name="washroom_area">ਵਾਸ਼ਰੂਮ ਖੇਤਰ</string>
+    <string name="outdoor">ਬਾਹਰੀ</string>
+    <string name="indoor">ਅੰਦਰ</string>
+    <string name="upload_pics">ਅਪਲੋਡ ਕਰੋ ਤਸਵੀਰਾਂ</string>
+    <string name="under_100">80 ਤੋਂ ਘੱਟ</string>
+    <string name="_81_150">81–150</string>
+    <string name="_151_200">151–200</string>
+    <string name="_201_300">201–300</string>
 
 </resources>
