--- a/app/src/main/res/values-pa/strings.xml
+++ b/app/src/main/res/values-pa/strings.xml
@@ -372,8 +372,8 @@
     <string name="cant_fetch_location_address">ਲੋਕੀਸ਼ਨ ਪਤਾ ਆਪਣੇ ਆਪ ਪ੍ਰਾਪਤ ਕਰਨ ਵਿੱਚ ਅਸਮਰੱਥ, ਕਿਰਪਾ ਕਰਕੇ ਲੋਕੇਸ਼ਨ ਸੈਟਿੰਗਜ਼ ਦੀ ਜਾਂਚ ਕਰੋ.</string>
     <string name="please_select_state_first">ਕਿਰਪਾ ਕਰਕੇ ਪਹਿਲਾਂ ਰਾਜ ਦੀ ਚੋਣ ਕਰੋ</string>
     <string name="sign_up">ਸਾਇਨ ਅਪ</string>
-    <string name="login_as_field_executive">ਫੀਲਡ ਐਗਜ਼ੀਕਿ .ਟਿਵ ਵਜੋਂ ਲਾਗਇਨ ਕਰੋ</string>
-    <string name="login_as_dhaba_owner">ਧਾਬਾ ਮਾਲਕ ਦੇ ਤੌਰ ਤੇ ਲਾਗਇਨ ਕਰੋ</string>
+    <string name="login_as_field_executive">ਕਰਮਚਾਰੀ ਵਜੋਂ ਲੌਗਇਨ ਕਰੋ</string>
+    <string name="login_as_dhaba_owner">ਸਾਥੀ ਵਜੋਂ ਲੌਗਇਨ ਕਰੋ</string>
     <string name="verify">ਤਸਦੀਕ ਕਰੋ</string>
     <string name="enter_otp_sent_to">ਨੂੰ ਭੇਜਿਆ ਓਟੀਪੀ ਦਰਜ ਕਰੋ</string>
     <string name="change_phone_number">ਫੋਨ ਨੰਬਰ ਬਦਲੋ</string>
